Easy tees scrollbar issue on iron-pages

--- a/p4m-shared/p4m.scss
+++ b/p4m-shared/p4m.scss
@@ -5145,7 +5145,8 @@ Smartphone <375px
       -moz-box-shadow: 0px 0px 30px rgba(0,0,0,0.4); /* FF3.5+ */
       -webkit-box-shadow: 0px 0px 30px rgba(0,0,0,0.4); /* Saf3.0+, Chrome */
       box-shadow: 0px 0px 30px rgba(0,0,0,0.4);
-      overflow: scroll;
+      overflow-x: hidden;
+      overflow-y: scroll;
       &#summaryPanel {
         h4 {
           height: 32px;
